src/snapshots/afrotd__parser__tests__interpretation_7.3.2_9.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 2
index: 9
text: "3. und 5 von der A-40. QB A12 geht gerade zurück, um einen\nPass zu werfen. Er befindet sich in schwerer Bedrängnis der Defense\nSpieler, als er einen Rückpass auf Back A22 wirft, der den Ball aus\nder Tackle Box heraus trägt. Kurz bevor A22 getackelt wird, wirft er von\nder A-35 einen Vorwärtspass über die neutrale Zone und der Ball landet\n20 Meter vom nächsten berechtigten Team A-Receiver entfernt auf dem\nBoden."
ruling: "Foul, absichtliches Wegwerfen. Die Ausnahme bzgl.\nder Tackle Box gilt nur für den Spieler, der den Snap oder den daraus\nresultierenden Rückpass kontrolliert. Downverlust am Punkt des Fouls.\n4. und 10 von der A-35 (Regel 7.3.2.h Ausnahme)."
