src/snapshots/afrotd__parser__tests__interpretation_7.3.4_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 4
index: 2
text: "Der berechtigte A88 geht während eines Downs, in dem ein legaler Vorwärtspass geworfen wird, freiwillig ins Aus. Er kehrt zurück\ninbounds, berührt aber nicht den Pass und wird von einem Gegner festgehalten, bevor der Ball von irgendeinem Spieler berührt wird."
ruling: "Keine Passbehinderung – A88 ist nicht berechtigt, einen legalen\nVorwärtspass zu fangen. Foul – Halten durch die Defense, Strafe – 10\nMeter vom Previous Spot und automatischer First Down."
