src/snapshots/afrotd__parser__tests__interpretation_7.3.5_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 5
index: 1
text: "Team B berührt einen legalen Vorwärtspass in der Nähe der Seitenlinie, während sich der ursprünglich berechtigte A1 im Aus befindet.\nA1 kommt ins Feld zurück und berührt den Pass."
ruling: "Legales\nSpiel. Die Berührung durch Team B berechtigt alle Spieler während des\nverbleibenden Downs, den Vorwärtspass zu berühren."
