src/snapshots/afrotd__parser__tests__interpretation_7.3.6_10.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 6
index: 10
text: "Der in der Luft befindliche Receiver A85 ergreift den Ball. Bei der\nLandung berührt er zuerst den Boden inbounds mit seinem linken Fuß,\nals er inbounds zu Boden fällt. Unmittelbar, nachdem A85 auf den Boden prallt, wird der Ball frei, berührt aber nie den Boden, bevor der Spieler den Ball wieder unter Kontrolle hat."
ruling: "Vollständiger Pass.\nWenn der inbounds befindliche Receiver zu Boden fällt und die Kontrolle verliert, ist das Fangen vollständig, solange der Spieler inbounds\nbleibt und der Ball nie den Boden berührt."
