src/snapshots/afrotd__parser__tests__interpretation_7.3.6_11.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 6
index: 11
text: "Der in der Luft befindliche Receiver A85 ergreift den Ball. Bei\nder Landung berührt er zuerst den Boden inbounds mit seinem linken\nFuß, als er im Aus zu Boden fällt. Unmittelbar, nachdem A85 auf den\nBoden prallt, wird der Ball frei."
ruling: "Unvollständiger Pass, unabhängig davon, ob der Ball zu Boden fällt oder nicht, da der Receiver im\nAus ist."
